_mocha/hu_day2/api/lattice.yml
apiVersion: gateway.networking.k8s.io/v1beta1
kind: GatewayClass
metadata:
  name: amazon-vpc-lattice
spec:
  controllerName: application-networking.k8s.aws/gateway-api-controller
---
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: lattice-gateway
  namespace: default
spec:
  gatewayClassName: amazon-vpc-lattice
  listeners:
  - name: http
    protocol: HTTP
    port: 80
    allowedRoutes:
      namespaces:
        from: All 
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: engine-route
  namespace: app
spec:
  parentRefs:
  - name: lattice-gateway
    namespace: default
    sectionName: http
  hostnames:
  - "analytics.vitalforge.internal"
  rules:
  - backendRefs:
    - name: engine
      kind: Service
      port: 8080
